--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@ body {
     </head>
 <body>
     <header class="nav" ;>
-      <div> <a target="_blank" href="index.html"> |Home|
-        </a><a target="_blank" href="about.html"> |About|
-        </a><a target="_blank" href="contact.html"> |Contact|
+      <div> <a target="_self" href="index.html"> |Home|
+        </a><a target="_self" href="about.html"> |About|
+        </a><a target="_self" href="contact.html"> |Contact|
         </a></div>
     </header>
     <h1 id="main" ; class="heading">About</h1>
