--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
       <h2 id="heading">Who Am I?(Basic Introduction)</h2>
       <img src="IMAGES/KONO DIO DA(gross).jpeg" width="300" height="200">
       <iframe width="466.6666667" height="262.5" src="https://www.youtube.com/embed/HaGkk60kcjQ?si=yuRk4t5smayGnnX7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <p>My name is Roy and I am go to school at age 15. I am big Kingdom Hearts fanboy!</p>
+      <p>My name is ███ and I am go to ██████ at ███ ██. I am big Kingdom Hearts fanboy!</p>
     </section><br>
     <hr>
     <section class="content">
@@ -35,7 +35,7 @@ body {
       <img src="IMAGES/Kingdom Hearts 2.8 Image.jpg" width="300" height="200">>
       <img src="IMAGES/Roxas and Sora Faceless Wallpaper.png" width="300" height="200">>
       <br>
-      <p>My name is Roy and I am go to school at age 15 in freshman year. I live in California in the United Stated of A! And also my Stand is STAR SEPHIROTH PLATINUM MADE IN THE WORLD OVER HEAVEN SORA TRON. Theres more info in the about so check that out while you can!</p>
+      <p>My name is ███ and I am go to school at age ██ in █████████████. I live in ██████████ in the US of A! And also my Stand is STAR SEPHIROTH PLATINUM MADE IN THE WORLD OVER HEAVEN SORA TRON. Theres more info in the about so check that out while you can!</p>
     </section><br>
     <hr>
     <section class="content">
