--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ body {
       <h2 id="heading">Who Am I?(But Better)</h2>
       <iframe width="466.6666667" height="262.5" src="https://www.youtube.com/embed/y4yQioUhk9E?si=BS7xwtrXWl0Ja2fJ&amp;start=241" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <img src="IMAGES/Roxas Fire.jpeg" width="300" height="200">
-      <p>My name is Roy, I am a 15 year old Nobody and I am a big Kingdom Hearts fanboy. I am a highschooler in the 9th grade. My pronouns are "she/her".</p>
+      <p>My name is ███, I am a ██ year old Nobody and I am a big Kingdom Hearts fanboy. I am a █████████████ in the ███ grade. My pronouns are "she/her".</p>
     </section><br>
     <hr>
     <section class="content">
