--- a/about.html
+++ b/about.html
@@ -85,6 +85,7 @@ body {
     <section class="content">
       <h2 id="heading">STOP</h2>
       <iframe width=width="280" height="157.5" src="https://www.youtube.com/embed/bQZHvT4kJO4?si=pFyauJIX-FYoojWl&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="280" height="157.5" src="https://www.youtube.com/embed/eY87dfm1meE?si=pxJyUqHu002UZ7l3&amp;start=24" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <p>DO NOT TOUCH THAT BUTTON BELOW</p>
     </section><br>
     <hr>
