--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<Head>
+  <title>Home</title>
+  <link rel="icon" type="image/x-icon" href="/IMAGES/LennLeaf_Icon.ico">
+</Head>
 <style>
 body {
   background-image: url('IMAGES/bg-image.jpg');
