--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
     <head>
         <link rel="stylesheet" type="text/css" href="index.css" />
         <title>Home</title>
-        <link rel="icon" type="image/x-icon" href="/IMAGES/LennLeaf_Icon.ico">
+        <link rel="icon" type="image/x-icon" href="LennLeaf_Icon.ico">
     </head>
 <body>
     <header class="nav" ;>
