--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,9 @@ body {
 }
 </style>
     <head>
-        <link rel="stylesheet" type="text/css" href="style2.css" />
+        <link rel="stylesheet" type="text/css" href="index.css" />
+        <title>Contact</title>
+        <link rel="icon" type="image/x-icon" href="LennLeaf_Icon.ico">
     </head>
 <body>
     <header class="nav" ;>
