--- a/about.html
+++ b/about.html
@@ -1,4 +1,6 @@
+<!-- The html tag contains the ENTIRE page. -->
 <html>
+<!-- The style tag contains the background image and the font. -->
 <style>
 body {
   background-image: url('IMAGES/bg-image.jpg');
@@ -10,12 +12,15 @@ body {
   font-family: Verdana, sans-serif;
 }
 </style>
+<!-- The head tag contains the stylesheet/css, site title, and favicon. -->
     <head>
         <link rel="stylesheet" type="text/css" href="index.css" />
         <title>About</title>
         <link rel="icon" type="image/x-icon" href="LennLeaf_Icon.ico">
     </head>
+<!-- The body tag contains all of the important site stuff. -->
 <body>
+    <!-- The header tag contains the navigation bar. -->
     <header class="nav" ;>
       <div> <a target="_self" href="index.html"> |Home|
         </a><a target="_self" href="about.html"> |About|
@@ -24,13 +29,15 @@ body {
     </header>
     <h1 id="main" ; class="heading">About</h1>
     <hr>
+    <!-- This section tag contains the content for "Who Am I(But Better)". -->
     <section class="content">
       <h2 id="heading">Who Am I?(But Better)</h2>
       <iframe width="466.6666667" height="262.5" src="https://www.youtube.com/embed/y4yQioUhk9E?si=BS7xwtrXWl0Ja2fJ&amp;start=241" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <img src="IMAGES/Roxas Fire.jpeg" width="300" height="200">
-      <p>My name is ███, I am a ██ year old Nobody and I am a big Kingdom Hearts fanboy. I am a █████████████ in the ███ grade. My pronouns are "she/her".</p>
+      <p>My name is Roy, I am a 15 year old Nobody and I am a big Kingdom Hearts fanboy. I am a highschooler in the 9th grade. My pronouns are "she/her".</p>
     </section><br>
     <hr>
+    <!-- This section tag contains the content for "Interests". -->
     <section class="content">
       <h1>Interests</h1>
       <img src="IMAGES/Kingdom Hearts 2 Wallpaper.jpg" width="300" height="200">>
@@ -39,22 +46,25 @@ body {
       <p>I have a lot of interests but my main interests are Kingdom Hearts, The World Ends With You, RWBY, Ben 10, Beyblade, Yu-Gi-Oh, Final Fantasy, Jojo's Bizarre Adventure, Vocaloid, Project Diva, and Gundam!!!</p>
     </section><br>
     <hr>
+    <!-- This section tag contains content for "Goals". -->
     <section class="content">
       <h2 id="heading">Goals</h2>
       <img src="IMAGES/Goals.jpeg" width="300" height="200">
       <p>My goals are to achieve my dreams and become the best Beyblader in the world. And also the best gamer girl in the world as well as a side quest.</p>
     </section><br>
     <hr>
+    <!-- This section tag contains the content for "My Favorite Games and Shows". -->
     <section class="content">
-      <h1>My favorite games and shows</h1>
+      <h1>My Favorite Games and Shows</h1>
       <img src="IMAGES/TWEWY NDS Cover Art.jpg" width="200" height="200">
       <img src="IMAGES/Bakuten Shoot Beyblade 2002 Nippon Animation.jpg" width="150" height="200">
       <br>
       <p>My top 3 favorite games(from places 1-3) are Kingdom Hearts 2, Project Diva, and The World Ends With You. A couple of my favorite shows are RWBY, JJBA, Ben 10, and Bakuten Shoot Beyblade.</p>
     </section><br>
     <hr>
+    <!-- This section tag contains the content for "My Favorite Songs and Artists". -->
     <section class="content">
-      <h1>My favorite games and shows</h1>
+      <h1>My Favorite Songs and Artists</h1>
         <iframe width="280" height="157.5" src="https://www.youtube.com/embed/dSw8CucthGc?si=I8SUlHw5cy6eZC5B&amp;start=104" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="280" height="157.5" src="https://www.youtube.com/embed/B1nDzB1P8GM?si=P8QR9t9H6yGC5t1w&amp;start=124" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="280" height="157.5" src="https://www.youtube.com/embed/XE8_bYXgBlQ?si=LRJFEXwvkDBAkyX5&amp;start=20" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -65,6 +75,7 @@ body {
       Some of my favorite songs are Face My Fears (by Hikaru Utada), Simple and Clean (by Hikaru Utada), This Will Be the Day (by Jeff Williams), Paris (by The Chainsmokers), Counting Stars (by OneRepublic), Safe And Sound (by Capital Cities), and Meltdown (by iroha(sasaki)). </p>
     </section><br>
     <hr>
+    <!-- This section tag contains the content for "Trivia". -->
     <section class="content">
       <h2 id="heading">Trivia</h2>
       <img src="IMAGES/Ben 10 Alien Force Wallpaper.jpg" width="300" height="200">
@@ -84,6 +95,7 @@ body {
         </ul></p>
     </section><br>
     <hr>
+    <!-- This section tag contains the content for "STOP". -->
     <section class="content">
       <h2 id="heading">STOP</h2>
       <iframe width=width="280" height="157.5" src="https://www.youtube.com/embed/bQZHvT4kJO4?si=pFyauJIX-FYoojWl&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -91,6 +103,7 @@ body {
       <p>DO NOT TOUCH THAT BUTTON BELOW</p>
     </section><br>
     <hr>
-<button onclick="alert('STAR SEPHIROTH PLATINUM MADE IN THE WORLD OVER HEAVEN SORA TRON BITES THE REQUIEM ACT 10 has already touched this button...')">Evil Button >:3</button>
+    <!-- BITES THE REQUIEM . -->
+    <button onclick="alert('STAR SEPHIROTH PLATINUM MADE IN THE WORLD OVER HEAVEN SORA TRON BITES THE REQUIEM ACT 10 has already touched this button...')">Evil Button >:3</button>
   </body>
 </html>
