--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,7 @@
+<!-- The html tag contains the ENTIRE page. -->
 <html>
-    <style>
+<!-- The style tag contains the background image and the font. -->
+<style>
 body {
   background-image: url('IMAGES/bg-image.jpg');
   background-repeat: no-repeat;
@@ -10,18 +12,22 @@ body {
   font-family: Verdana, sans-serif;
 }
 </style>
+<!-- The head tag contains the stylesheet/css, site title, and favicon. -->
     <head>
         <link rel="stylesheet" type="text/css" href="index.css" />
         <title>Contact</title>
         <link rel="icon" type="image/x-icon" href="LennLeaf_Icon.ico">
     </head>
+<!-- The body tag contains all of the important site stuff. -->
 <body>
+   <!-- The header tag contains the navigation bar. -->
     <header class="nav" ;>
       <div> <a target="_self" href="index.html"> |Home|
         </a><a target="_self" href="about.html"> |About|
         </a><a target="_self" href="contact.html"> |Contact|
         </a></div>
     </header>
+    <!-- This section tag contains the content for "Contacts". -->
     <section class="content">
       <h2 id="heading">Contacts</h2>
       <hr>
@@ -30,6 +36,7 @@ body {
       <p>There are many ways to contact me such as through my <a href="https://gravatar.com/lennleaf.card">Gravatar</a> (embedded below) and my <a href="https://lennleaf.carrd.co/">Carrd.co</a>(embedded below also). My Discord username is @lennleaf, if you're those kind of people. You can also contact me at my public email, <a href="mailto:lennleaf02@gmail.com">lennleaf02@gmail.com</a>. Thank you!</p>
     </section><br>
     <hr>
+    <!-- The iframes tag contains the embeds. -->
     <iframe src="https://lennleaf.carrd.co/" width="400" height="720" style="border:0; margin:0; padding:0;"></iframe>
     <iframe src="https://gravatar.com/lennleaf.card" width="360" height="400" style="border:0; margin:0; padding:0;"></iframe>
 </body>
